@@ -66,6 +66,9 @@ innodb_file_format = Barracuda
 innodb_large_prefix = 1
 innodb_file_per_table = 1
 
+# add/modify this in [mysqld] to stop autoincrement on insert ignore(optional)
+innodb_autoinc_lock_mode = 0
+
 # restart mysql
 sudo service mysql restart
 
